styles/Home.module.css
@keyframes fadeIn {
    0% {
        opacity: 0%;
    }
    100% {
        opacity: 100%;
    }
}

.section, .contacts {
    margin-top: 3em;
    margin-left: 4em;
    margin-right: 4em;
    animation: var(--animation-time) ease-out var(--animation-time) 1 fadeIn;
    animation-fill-mode: both;
    scroll-margin-top: calc(var(--nav-bar-height) + 1vh);
}

.contacts {
    margin-top: 6em;
    min-width: 100vh;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    box-sizing: border-box;
    padding-left: 35em;
    padding-right: 35em;
}

.contact {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0.5em;
    border-radius: 0.5em;
}

.contact:hover {
    background-color: rgba(var(--app-rgb), 0.4)
}


.project {
    min-width: 90%;
    width: 90%;
    height: 35vh;
    box-sizing: border-box;
    padding: 1em;
    box-shadow: none;
    border: none;
    border-radius: 0.7em;
    cursor: pointer;
}

.imageOverlay {
    visibility: hidden;
    display: none;
    min-width: 100%;
    min-height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    position: absolute;
    top: 0%;
    left: 0%;
    justify-content: center;
    align-items: center;
    z-index: 9999;
    color: white;
}

.project:hover {
    box-shadow: 0.2em 0.2em var(--app-color);
    border: 0.2em solid var(--app-color);
}

.project:hover .imageOverlay {
    visibility: visible;
    display: flex;
}

.project div [id="projectImage"] {
    min-width: 100%;
    height: 20vh;
    display: flex;
    justify-content: center;
    padding-bottom: 1em;
    overflow: hidden;
    position: relative;
}

.project img {
    object-fit: contain;
    max-height: 100%;
    max-width: 100%;
}

.achievement {
    box-sizing: border-box;
    padding: 1.5em;
    box-shadow: none
}

.achievement:hover {
    box-shadow: 0.25em 0.25em rgba(var(--app-rgb), 0.8)
}

.header, .footer {
    background-color: var(--header-color);
    min-width: 100%;
    display: flex;
}

@keyframes slideUp {
    0% {
       padding-top: 4%;
    }
    100% {
        padding-top: 1%
    }
}

.header {
    min-height: 40vh;
    max-height: 40vh;
    box-sizing: border-box;
    padding-left: 10em;
    position: relative;
    overflow: hidden;
    animation: var(--animation-time) ease-out 0s 1 fadeIn;
}

.header img {
    filter: drop-shadow(0.2em 0.2em 0.8em rgba(0, 0, 0, 0.3));
    scale: 1.1;
}

.header [id="header_image"] {
    position: relative;
    min-height: 100%;
    max-width: 100%;
    min-width: 40vh;
    overflow: hidden;
    box-sizing: border-box;
    animation: var(--animation-time) ease-out 0s 1 slideUp;
    animation-fill-mode: both;
}



.footer {
    height: 15vh;
    margin-top: 6em;
    justify-content: space-evenly;
    align-items: center;
    box-sizing: border-box;
    padding: 1em;
    flex-direction: column
}

.navBar {
    min-width: 100%;
    z-index: 9999;
    position: sticky;
    top: 0%;
    background-color: var(--app-color);
    min-height: var(--nav-bar-height);
}

.navBarElement {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 1.5em;
    padding-right: 1.5em;
    min-height: 100%;
    color: rgb(250, 250, 250);
    cursor: pointer;
}

.navBarElement:hover {
    background-color: var(--app-color-dark);
}

